@@ -10,6 +10,9 @@ bzr-0.0.5  NOT RELEASED YET
       status and can be shown with their IDs.  ``bzr status --all``
       shows all versioned files and unknown files but not ignored files.
 
+    * ``bzr log`` runs from most-recent to least-recent, the reverse
+      of the previous order.
+
 
   ENHANCEMENTS:
 
